--- a/index.css
+++ b/index.css
@@ -1,1 +1,50 @@
+body{
+    margin:0;
+    max-width:100%;
+}
 
+header{
+    display:flex;
+}
+
+nav{
+    display:flex;
+    width:100%;
+    height: 100px;
+    background-color: #232A34;
+    padding: 0 1.15rem 0 1.15rem;
+    align-items:center;
+    position:relative;
+    box-sizing: border-box;
+}
+
+ul{
+    display:flex;
+    flex-direction: row;
+    width:100%;
+    margin:0;
+    padding:0;
+    justify-content: space-between;
+}
+
+.left_nav{
+    display:flex;
+    flex-direction: row;
+}
+
+.right_nav{
+    display:flex;
+    flex-direction: row;
+}
+
+li{
+    list-style: none;
+}
+li a{
+    color:white;
+    text-decoration: none;
+}
+
+h1{
+    display:flex;
+}
