--- a/index.css
+++ b/index.css
@@ -77,8 +77,8 @@ h2{
     justify-content: center;
 }
 .center_logo img{
-    height:300px;
-    width:300px;
+    height:45vw;
+    width:45vw;
 }
 footer{
     display:flex;
@@ -88,7 +88,7 @@ footer{
     height:50px;
     width:100%;
     justify-content: center;
-    position: absolute;
+    position: relative;
     bottom:0;
     align-items: center;
 }
