--- a/index.css
+++ b/index.css
@@ -78,6 +78,14 @@ main{
 .map{
     font-size:20px;
     padding: 20px 20px 20px 20px;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.map_img{
+    display:flex;
+    justify-content: center;
+    width:100%;
 }
 h2{
     display:flex;
