--- a/index.css
+++ b/index.css
@@ -122,6 +122,27 @@ footer{
     width: 100%;
     
 }
+form{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+}
+#textArea{
+    max-width: 400px;
+    max-height: 150px;
+    width: 300px;
+    height: 150px;
+}
+p2{
+    font-size: 40px;
+}
+label{
+    font-size: 30px;
+}
+address{
+    font-size: 20px;
+}
 
 @media screen and (min-width:400px) and (max-width: 640px){
     .wordlogo{
