--- a/index.css
+++ b/index.css
@@ -95,7 +95,10 @@ h2{
     justify-content: center;
 }
 p{
-    font-size: 14px;
+    font-size: 20px;
+}
+div ul li{
+    font-size: 20px;
 }
 .center_logo img{
     height:30vw;
